--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>🌍 GeoFilter Settings</h2>
+    <h2>GeoFilter Settings</h2>
     
     <div class="input-group">
       <label>YouTube API Key</label>
