--- a/popup.html
+++ b/popup.html
@@ -1,43 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>GeoBlocker</title>
-  <link rel="stylesheet" href="styles.css"/>
-  <style>
-    /* tiny inline fallback styling so popup isn't completely blank if styles.css fails */
-    body{font-family:Arial,Helvetica,sans-serif;min-width:320px;padding:12px;color:#111}
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <h2>GeoBlocker</h2>
-    <p>Pick countries to block — search, select, Add.</p>
-
-    <div class="input-row">
-      <input id="countryFilter" placeholder="Type to filter countries..."/>
+    <h2>YouTube GeoFilter</h2>
+    
+    <div class="input-group">
+      <label>YouTube API Key</label>
+      <input type="password" id="apiKey" placeholder="Paste API Key here">
     </div>
 
-    <div class="input-row">
-      <select id="countrySelect" size="8"></select>
+    <div class="input-group">
+      <label>Block Countries (ISO Code)</label>
+      <div class="row">
+        <input type="text" id="countryInput" placeholder="e.g. US, IN, RU" maxlength="2">
+        <button id="addBtn">Add</button>
+      </div>
     </div>
 
-    <div class="input-row">
-      <button id="addBtn">Add</button>
-      <button id="addAllBtn">Add Visible</button>
-    </div>
+    <div id="chipContainer" class="chip-container"></div>
 
-    <div id="list" class="list"></div>
-
-    <div class="footer">
-      <button id="clearCache">Clear cache</button>
-      <button id="resetAll" class="danger">Reset all</button>
-    </div>
-
-    <div class="small">Note: Some channels don't set a country on their About page.</div>
+    <button id="saveBtn" class="save-btn">Save Settings</button>
+    <div id="status"></div>
   </div>
-
   <script src="popup.js"></script>
 </body>
 </html>
