--- a/popup.html
+++ b/popup.html
@@ -22,6 +22,18 @@
 
     <div id="chipContainer" class="chip-container"></div>
 
+    <div class="divider"></div>
+
+    <!-- NEW TOGGLE SWITCH -->
+    <div class="toggle-row">
+      <span>Block Hidden Countries</span>
+      <label class="switch">
+        <input type="checkbox" id="blockUnknown">
+        <span class="slider"></span>
+      </label>
+    </div>
+    <div class="info-text">Blocks channels that don't list a country.</div>
+
     <button id="saveBtn" class="save-btn">Save Settings</button>
     <div id="status"></div>
   </div>
